<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_menu_upload"
            android:title="@string/menu_upload" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_delete" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_about" />
    </group>
</menu>