<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.ujaen.virtualpresentation.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_qr"
        android:name="es.ujaen.virtualpresentation.activities.ui.qr.QRFragment"
        android:label="@string/menu_qr"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/nav_upload"
        android:name="es.ujaen.virtualpresentation.activities.ui.uploadfile.UploadFileFragment"
        android:label="@string/menu_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/nav_delete"
        android:name="es.ujaen.virtualpresentation.activities.ui.delete.DeleteFragment"
        android:label="@string/menu_delete"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/nav_about"
        android:name="es.ujaen.virtualpresentation.activities.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>