<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/login_edit_user"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="admin"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/login_edit_pass"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="admin"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorPrimaryDark" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/login_remember"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Registro"
            android:textColor="@color/colorAccent"
            android:textStyle="bold|italic" />
    </TableRow>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/login_button"
        android:textColor="@color/colorWhite" />


</LinearLayout>